# SVIn

okvis_ros/launch/: flir_stereo.launch  svin_flir_stereo_air.launch  svin_gopro2_uw.launch  svin_gopro_uw.launch  svin_stereorig_v1.launch  svin_stereorig_v2.launch
okvis_ros/src/: Publisher.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/include/pose_graph/: Subscriber.h
pose_graph/include/utils/: Accumulator.h  CameraPoseVisualization.h  Statistics.h  ThreadsafeTemporalBuffer-inl.h  Timer.h  Utils.h  UtilsOpenCV.h
pose_graph/launch/: pose.launch
pose_graph/src/: pose_graph_node.cpp
pose_graph/src/pose_graph/: GlobalMapping.cpp  Keyframe.cpp  LoopClosure.cpp  Parameters.cpp  PoseGraph.cpp  Publisher.cpp  Subscriber.cpp
pose_graph/src/utils/: Utils.cpp
