<?xml version="1.0"?>
<package format="2">
  <name>pose_graph</name>
  <version>1.0.0</version>
  <description>The pose_graph package</description>

  <maintainer email="srahman@email.sc.edu">Sharmin Rahman</maintainer>
  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>

    <depend>libgoogle-glog-dev</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>gps_common</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Added by Sharmin -->
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!-- Added by Hunter -->
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>

</package>
